apps/glance/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: apps
  labels:
    app: glance
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: glance
